<resources>
    <string name="app_name">Yoyo</string>
    <string name="action_settings">Settings</string>
    <string name="main_screen_image_description">App name</string>
    <string name="backBtnTxt">Back</string>
    <string name="exitBtnTxt">Exit</string>
    <string name="font">Bungee</string>
    <string name="character">Character</string>
    <string name="bcklvselection">Level selection backgroung</string>
    <string name="flag">Completed flags for level selection screen</string>
    <string name="lvbridge">Bridge Level</string>
    <string name="lvbridgeglow">Glow alteration for bridge Level</string>
    <string name="lvvegetables">Vegetables Level</string>
    <string name="lvvegetablesglow">Glow alteration for vegetables Level</string>
    <string name="lvlily">Lily Level</string>
    <string name="lvlilyglow">Glow alteration for lily Level</string>
    <string name="lvglobo">Globo Level</string>
    <string name="lvgloboglow">Glow alteration for globo Level</string>
    <string name="lvtree">Tree Level</string>
    <string name="lvtreeglow">Glow alteration for tree Level</string>
</resources>
