<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lvselectionscroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.jondhc.yoyo.LevelSelectionActivity">
        <!-- Background -->
        <ImageView
            android:id="@+id/lvbackgroundimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bcklvselection">
        </ImageView>

        <!-- Character -->
        <ImageView
            android:id="@+id/character"
            android:rotation="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/character">
        </ImageView>

        <!-- Level Vegetables -->
        <ImageView
            android:id="@+id/lvvegetables"
            android:rotation="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lvvegetables">
        </ImageView>
        <!-- Level Vegetables Glow-->
        <ImageView
            android:id="@+id/lvvegetablesglow"
            android:rotation="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lvvegetablesglow">
        </ImageView>
        <!-- Level Vegetables Flag -->
        <ImageView
            android:id="@+id/lvvegetables_flag"
            android:rotation="-22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flag">
        </ImageView>

        <!-- Level Tree -->
        <ImageView
            android:id="@+id/lvtree"
            android:rotation="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lvtree">
        </ImageView>
        <!-- Level Tree Glow-->
        <ImageView
            android:id="@+id/lvtreeglow"
            android:rotation="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lvtreeglow">
        </ImageView>
        <!-- Level Tree Flag -->
        <ImageView
            android:id="@+id/lvtreeflag"
            android:rotation="-22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flag">
        </ImageView>

        <!-- Level Bridge -->
        <ImageView
            android:id="@+id/lvbridge"
            android:rotation="-22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lvbridge">
        </ImageView>
        <!-- Level Bridge Glow-->
        <ImageView
            android:id="@+id/lvbridgeglow"
            android:rotation="-22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lvbridgeglow">
        </ImageView>
        <!-- Level Bridge Flag -->
        <ImageView
            android:id="@+id/lvbridgeflag"
            android:rotation="-22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flag">
        </ImageView>

        <!-- Level Lily -->
        <ImageView
            android:id="@+id/lvlily"
            android:rotation="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lvlily">
        </ImageView>
        <!-- Level Lily Glow-->
        <ImageView
            android:id="@+id/lvlilyglow"
            android:rotation="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lvlilyglow">
        </ImageView>
        <!-- Level Lily Flag -->
        <ImageView
            android:id="@+id/lvlilyflag"
            android:rotation="-22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flag">
        </ImageView>

        <!-- Level Globo -->
        <ImageView
            android:id="@+id/lvglobo"
            android:rotation="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lvglobo">
        </ImageView>
        <!-- Level Globo Glow-->
        <ImageView
            android:id="@+id/lvgloboglow"
            android:rotation="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lvgloboglow">
        </ImageView>
        <!-- Level Globo Flag -->
        <ImageView
            android:id="@+id/lvgloboflag"
            android:rotation="-22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flag">
        </ImageView>
</RelativeLayout>
</android.support.v4.widget.NestedScrollView>